--- a/calculator/calculator_start.html
+++ b/calculator/calculator_start.html
@@ -90,25 +90,25 @@
       </div>
       <div id="keys">
         <div id="numbers">
-          <div onclick="addNumber('7')">7</div>
-          <div onclick="addNumber('8')">8</div>
-          <div onclick="addNumber('9')">9</div>
-          <div onclick="addNumber('4')">4</div>
-          <div onclick="addNumber('5')">5</div>
-          <div onclick="addNumber('6')">6</div>
-          <div onclick="addNumber('1')">1</div>
-          <div onclick="addNumber('2')">2</div>
-          <div onclick="addNumber('3')">3</div>
-          <div onclick="addNumber('.')">.</div>
-          <div onclick="addNumber('0')">0</div>
-          <div id="=" onclick="onClickEquals('=')">=</div>
+          <div>7</div>
+          <div>8</div>
+          <div>9</div>
+          <div>4</div>
+          <div>5</div>
+          <div>6</div>
+          <div>1</div>
+          <div>2</div>
+          <div>3</div>
+          <div>.</div>
+          <div>0</div>
+          <div>=</div>
         </div>
         <div id="operators">
-          <div id="C" onclick="onClickCancel('C')">C</div>
-          <div onclick="onClickOperator('+')">+</div>
-          <div onclick="onClickOperator('-')">-</div>
-          <div onclick="onClickOperator('*')">x</div>
-          <div onclick="onClickOperator('/')">/</div>
+          <div>C</div>
+          <div>+</div>
+          <div>-</div>
+          <div>x</div>
+          <div>/</div>
         </div>
       </div>
     </div>
