--- a/Quiz/index.html
+++ b/Quiz/index.html
@@ -10,7 +10,9 @@
     <section class="dojo">
       <div class="quiz-body">
         <header>
+          <div id="timer">Time: <strong>20</strong></div>
           <div id="score">Score: <strong>0</strong></div>
+          <div id="hiScore">High Score: <strong></strong></div>
           <h1>Quiz Ninja!</h1>
         </header>
         <div id="question"></div>
